--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,30 @@
+<!--
+  Generated template for the homePage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
+
+    <ion-navbar>
+        <ion-title>Media</ion-title>
+      </ion-navbar>
+
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content>
+
+    <ion-list>
+        <ion-item *ngFor="let item of list">
+          <ion-thumbnail item-start>
+              <!-- <img [src]="config.fileUrl + (item?.filename)"> -->
+              <img [src]="config.fileUrl + (item?.filename | thumbnail: 'small')">
+              <!-- <img [src]="config.fileUrl + item.filename "> -->
+          </ion-thumbnail>
+          <h2>Title: {{item.title}}</h2>
+          <p>Desc: {{item.description}}</p>
+          <button ion-button clear item-end>View</button>
+        </ion-item>
+      </ion-list>
+
 </ion-content>
